feat-major : preferred_news for user
